cmake_minimum_required(VERSION 2.6)
project( svxlabel )
add_definitions( -O0 -g -Wall )
#add_definitions( -O2 )
find_package( OpenCV REQUIRED )
add_executable( svxlabel driver.cpp gbh.cpp )
target_link_libraries( svxlabel ${OpenCV_LIBS} )
#add_executable( utest test-union.cpp )
#add_executable( htest htest.cpp )
#add_executable( cvtest cvtest.cpp )
#target_link_libraries( cvtest ${OpenCV_LIBS} )
#ENABLE_TESTING()
#ADD_TEST(SimpleTest ${CMAKE_CURRENT_BINARY_DIR}/SimpleTest)
